@@ -44,6 +44,9 @@ try {
 
 const semver = require('semver');
 
+// Search an undici@5 request.headers string for a 'traceparent' header.
+const headersStrHasTraceparentRe = /^traceparent:/im;
+
 let isInstrumented = false;
 let spanFromReq = null;
 let chans = null;
@@ -130,17 +133,37 @@ function instrumentUndici(agent) {
     const propSpan =
       span || parentRunContext.currSpan() || parentRunContext.currTransaction();
     if (propSpan) {
-      propSpan.propagateTraceContextHeaders(
-        request,
-        function (req, name, value) {
-          if (typeof request.addHeader === 'function') {
-            req.addHeader(name, value);
-          } else if (Array.isArray(request.headers)) {
-            // undici@6.11.0 accidentally, briefly removed `request.addHeader()`.
-            req.headers.push(name, value);
+      // Guard against adding a duplicate 'traceparent' header, because that
+      // breaks ES. https://github.com/elastic/apm-agent-nodejs/issues/3964
+      // Dev Note: This cheats a little and assumes the header names to add
+      // will include 'traceparent'.
+      let alreadyHasTp = false;
+      if (Array.isArray(request.headers)) {
+        // undici@6
+        for (let i = 0; i < request.headers.length; i += 2) {
+          if (request.headers[i].toLowerCase() === 'traceparent') {
+            alreadyHasTp = true;
+            break;
           }
-        },
-      );
+        }
+      } else if (typeof request.headers === 'string') {
+        // undici@5
+        alreadyHasTp = headersStrHasTraceparentRe.test(request.headers);
+      }
+
+      if (!alreadyHasTp) {
+        propSpan.propagateTraceContextHeaders(
+          request,
+          function (req, name, value) {
+            if (typeof request.addHeader === 'function') {
+              req.addHeader(name, value);
+            } else if (Array.isArray(request.headers)) {
+              // undici@6.11.0 accidentally, briefly removed `request.addHeader()`.
+              req.headers.push(name, value);
+            }
+          },
+        );
+      }
     }
 
     if (span) {
